<?xml version="1.0" encoding="utf-8"?>
<layout>

    <data>

        <variable
            name="viewModel"
            type="com.example.lattice.ui.registration.RegistrationViewModel" />

    </data>

    <ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.registration.RegistrationActivity"
        android:orientation="vertical"
        android:background="@color/light_gray">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/_16sdp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/_8sdp"
                android:orientation="vertical"
                android:background="@drawable/edittext_outline">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/mobile_number"
                    android:textColor="@color/black"/>

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/white"
                    android:hint="9999999999"
                    android:maxLines="1"
                    android:inputType="number"
                    android:maxLength="10"
                    android:text="@={viewModel.mobileNumber}"
                    android:layout_marginTop="@dimen/_6sdp"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/_8sdp"
                android:orientation="horizontal"
                android:layout_marginTop="@dimen/_12sdp"
                android:background="@drawable/edittext_outline">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/full_name"
                    android:textColor="@color/black"/>

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/white"
                    android:hint="Enter your full name"
                    android:maxLines="1"
                    android:inputType="text"
                    android:text="@={viewModel.fullName}"
                    android:layout_marginLeft="@dimen/_6sdp"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/_8sdp"
                android:orientation="horizontal"
                android:layout_marginTop="@dimen/_12sdp"
                android:background="@drawable/edittext_outline">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/gender"
                    android:textColor="@color/black"/>

                <Spinner
                    android:id="@+id/sp_Gender"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/_6sdp"
                    android:entries="@array/gender"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/_8sdp"
                android:orientation="horizontal"
                android:layout_marginTop="@dimen/_12sdp"
                android:background="@drawable/edittext_outline">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/dob"
                    android:textColor="@color/black"/>

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/white"
                    android:hint="Your DOB"
                    android:layout_marginLeft="@dimen/_6sdp"
                    android:layout_weight="1"
                    android:maxLines="1"
                    android:clickable="false"
                    android:cursorVisible="false"
                    android:focusable="false"
                    android:text="@={viewModel.dob}"
                    android:inputType="text"/>

                <ImageView
                    android:layout_width="@dimen/_18sdp"
                    android:layout_height="@dimen/_18sdp"
                    android:src="@drawable/calendar"
                    android:onClick="@{() -> viewModel.onClickOfCalender()}"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/_8sdp"
                android:orientation="horizontal"
                android:layout_marginTop="@dimen/_12sdp"
                android:background="@drawable/edittext_outline">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/address_line_1"
                    android:textColor="@color/black"/>

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/white"
                    android:hint="Enter your address 1"
                    android:layout_marginLeft="@dimen/_6sdp"
                    android:maxLines="1"
                    android:maxLength="50"
                    android:text="@={viewModel.addressLine1}"
                    android:inputType="text"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/_8sdp"
                android:orientation="horizontal"
                android:layout_marginTop="@dimen/_12sdp"
                android:background="@drawable/edittext_outline">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/address_line_2"
                    android:textColor="@color/black"/>

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/white"
                    android:hint="Enter your address 2"
                    android:maxLength="50"
                    android:maxLines="1"
                    android:inputType="text"
                    android:text="@={viewModel.addressLine2}"
                    android:layout_marginLeft="@dimen/_6sdp"/>

            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="@dimen/_12sdp">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/_8sdp"
                    android:orientation="horizontal"
                    android:background="@drawable/edittext_outline"
                    android:layout_weight="1">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/pincode"
                        android:textColor="@color/black"/>

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@color/white"
                        android:hint="Enter Pincode"
                        android:layout_marginLeft="@dimen/_6sdp"
                        android:maxLines="1"
                        android:maxLength="6"
                        android:text="@={viewModel.enterPincode}"
                        android:inputType="number"/>

                </LinearLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/check"
                    android:textColor="@color/white"
                    android:layout_gravity="center"
                    android:background="@color/gray"
                    android:paddingLeft="@dimen/_16sdp"
                    android:paddingRight="@dimen/_16sdp"
                    android:paddingTop="@dimen/_8sdp"
                    android:paddingBottom="@dimen/_8sdp"
                    android:onClick="@{()-> viewModel.checkPinCode()}"
                    android:layout_marginLeft="@dimen/_36sdp"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="@dimen/_12sdp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/district"
                    android:textColor="@color/black"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@{viewModel.district}"
                    android:layout_marginLeft="@dimen/_12sdp"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="@dimen/_12sdp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/state"
                    android:textColor="@color/black"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@{viewModel.state}"
                    android:layout_marginLeft="@dimen/_12sdp"/>

            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/register"
                android:textColor="@color/white"
                android:layout_gravity="center"
                android:background="@color/gray"
                android:gravity="center"
                android:paddingTop="@dimen/_8sdp"
                android:paddingBottom="@dimen/_8sdp"
                android:layout_marginTop="@dimen/_16sdp"
                android:onClick="@{()-> viewModel.onClickOfRegistration()}"/>

        </LinearLayout>




    </ScrollView>
</layout>
